--- a/index.html
+++ b/index.html
@@ -79,20 +79,13 @@
             <div class="activityflex">
                 <h2>Extra curricular activies</h2>
                 <ul>
-                    <li>Attended work shop at National college of engineering in total station instrument on 6th sep
-                        2018</li>
-                    <li>Poster presentation topic of (construction safety management) at 1st price of Einstein college
+                    <li>Attended work shop at National college of engineering in total station instrument on
+                        2020.</li>
+                    <li>Poster presentation topic of (Multi Trailer Rotating) at 3st price of Jp college
                         of
-                        engineering on 15th Feb 2019</li>
-                    <li>Participated in various concurrent program organized under N.S.S. Symposium attended the JP
-                        college
-                        of engineering on 7th Feb 2019
-                    </li>
-                    <li>CADD contest of 2nd price of Einstein college of engineering on 10th Aug 2019 Poster
-                        presentation
-                        topic of solar road at 2nd price Eintein college of engineering 17th Aug 2019
-                    </li>
-                    <li>Symposium attended the JP college of engineering 3 rd price TRICKLE US TECHNO 4th mar 2020
+                        engineering on 15th Feb 2021.</li>
+                    
+                    <li>National Level Symposium attended the PSN college of engineering 1 rd price Quiz Competition 2020.
                     </li>
                 </ul>
             </div>
