--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                         Jp College of
                         Engineering, Tenkasi
                         Anna
-                        University 2021 66%<br></li>
+                        University 2021    <span>-[66%]</span><br></li>
                     <li> HSC Shalom Matric Higher
                         Secondary school, Pavoorchatram.
                         State
-                        Board 2017 75%<br></li>
+                        Board 2017     <span>-[75%]</span><br></li>
                     <li> S.S.L.C Shalom Matric Higher
                         Secondary school, Pavoorchatram.
                         State
-                        Board 2015 86%<br></li>
+                        Board 2015    <span>-[86%]</span></li>
                 </ul>
             </div>
         </section>
